--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules
 reference
 logger.js
 person.js
+Guinn_Tyler_Node_Basics.docx
+Guinn_Tyler_Node_Basics.zip
+Guinn_Tyler_Node_Extended.docx
+Guinn_Tyler_Node_Extended.zip
